--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Material icons -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- Font awesome -->
   <script src="https://kit.fontawesome.com/6a79530112.js" crossorigin="anonymous"></script>
   <!-- Compiled and minified CSS -->
@@ -15,42 +17,67 @@
 </head>
 <body>
   <header class="main-header">
-    <nav class="transparent">
-      <div class="container">
-        <div class="nav-wrapper">
-          <a href="index.html" class="brand-logo">Quazzu</a>
-          <ul class="right hide-on-med-and-down">
-            <li class="active">
-              <a href="index.html" class="active-link">Home</a>
-            </li>
-            <li class="active">
-              <a href="index.html">Solution</a>
-            </li>
-            <li class="active">
-              <a href="index.html">Sign Up</a>
-            </li>
-            <li>
-              <a href="#" class="btn purple">Login</a>
-            </li>
-            <li>
-              <a href="https://www.facebook.com/">
-                <i class="fab fa-facebook-square"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://www.instagram.com/?nocaa=1">
-                <i class="fab fa-instagram"></i>
-              </a>
-            </li>
-            <li>
-              <a href="https://twitter.com/">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-          </ul>
+    <div class="navbar-fixed">
+      <nav class="transparent">
+        <div class="container">
+          <div class="nav-wrapper">
+            <a href="index.html" class="brand-logo">Quazzu</a>
+            <a href="#" data-target="slide-out" class="sidenav-trigger">
+              <i class="material-icons">menu</i>
+            </a>
+            <ul class="right hide-on-med-and-down">
+              <li class="active">
+                <a href="index.html" class="active-link">Home</a>
+              </li>
+              <li class="active">
+                <a href="index.html">Solution</a>
+              </li>
+              <li class="active">
+                <a href="index.html">Sign Up</a>
+              </li>
+              <li>
+                <a href="#" class="btn purple">Login</a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/">
+                  <i class="fab fa-facebook-square"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.instagram.com/?nocaa=1">
+                  <i class="fab fa-instagram"></i>
+                </a>
+              </li>
+              <li>
+                <a href="https://twitter.com/">
+                  <i class="fab fa-twitter"></i>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
+    
+    <!-- Sidenav -->
+    <ul class="sidenav" id="slide-out">
+      <h4 class="purple-text text-darken-4 center">Quazzu</h4>
+      <li class="active">
+        <a href="index.html" class="active-link">Home</a>
+      </li>
+      <li class="active">
+        <a href="index.html">Solution</a>
+      </li>
+      <li class="active">
+        <a href="index.html">Sign Up</a>
+      </li>
+      <li>
+        <div class="divider"></div>
+      </li>
+      <li>
+        <a href="#" class="btn purple">Login</a>
+      </li>
+    </ul>
     <!-- showcase -->
     <div class="showcase container">
       <div class="row">
@@ -69,6 +96,120 @@
       </div>
     </div>
   </header>
+
+  <!-- section: Icon Boxed -->
+  <section class="section section-icons center">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="fa fa-user fa-3x deep-purple-text text-darken-2"></i>
+            <h5 class="grey-text text-darken-4">Free Account</h5>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, nobis voluptatibus a explicabo laudantium obcaecati omnis esse. Necessitatibus saepe consectetur expedita magnam excepturi quia, vitae tempore quam accusamus ipsa sit.
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="fa fa-database fa-3x deep-purple-text text-darken-2"></i>
+            <h5 class="grey-text text-darken-4">NoSQL Database</h5>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, nobis voluptatibus a explicabo laudantium obcaecati omnis esse. Necessitatibus saepe consectetur expedita magnam excepturi quia, vitae tempore quam accusamus ipsa sit.
+          </div>
+        </div>
+        <div class="col s12 m4">
+          <div class="card-panel">
+            <i class="fa fa-bolt fa-3x deep-purple-text text-darken-2"></i>
+            <h5 class="grey-text text-darken-4">Fast Connection</h5>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, nobis voluptatibus a explicabo laudantium obcaecati omnis esse. Necessitatibus saepe consectetur expedita magnam excepturi quia, vitae tempore quam accusamus ipsa sit.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: About -->
+  <section class="section section-about grey lighten-4">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m6">
+          <h3>
+            <span class="deep-purple-text text-darken-1">About</span>
+            Us
+          </h3>
+          <p class="flow-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem accusantium, unde aspernatur maiores facilis atque, consequatur blanditiis mollitia odit obcaecati possimus magni officiis totam architecto dolorum ipsa minus voluptas! Labore!</p>
+        </div>
+        <div class="col s12 m6">
+          <img src="img/tech.jpg" alt="" class="circle responsive-img">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Developers -->
+  <section class="section section-developers white-text">
+    <div class="primary-overlay valign-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 center">
+            <h3>For Developers, By Developers</h3>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: language -->
+  <section class="section section-langauge grey lighten-4">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <h4 class="center">Work With
+            <span class="deep-purple-text text-darken-1">Any Language</span>
+          </h4>
+          <br><br><br>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col s2">
+          <img src="img/python-logo.png" alt="" class="responsive-img">
+        </div>
+        <div class="col s2">
+          <img src="img/ruby-logo.png" alt="" class="responsive-img">          
+        </div>
+        <div class="col s2">
+          <img src="img/php-logo.png" alt="" class="responsive-img">
+        </div>
+        <div class="col s2">
+          <img src="img/node-logo.png" alt="" class="responsive-img">
+        </div>
+        <div class="col s2">
+          <img src="img/c-sharp-logo.png" alt="" class="responsive-img">
+        </div>
+        <div class="col s2">
+          <img src="img/java-logo.png" alt="" class="responsive-img">
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Section: Podcast -->
+  <section class="section section-podcast white-text">
+    <div class="primary-overlay valign-wrapper">
+      <div class="container">
+        <div class="row">
+          <div class="col s12 m8">
+            <h4>Listen tothe Quazzu Podcast</h4>
+            <p>Eveny Thursday at 5pm EST</p>
+          </div>
+          <div class="col s12 m4">
+            <a href="#" class="btn purple btn-large podcast-btn">
+              <i class="fa fa-podcast"></i> Listen
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
     
 
 
@@ -76,5 +217,13 @@
    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
    <!-- Compiled and minified JavaScript -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+   <script>
+     $(document).ready(function(){
+      $('.sidenav').sidenav({
+        edge: 'right'
+      });
+    });
+   </script>
 </body>
 </html>
