--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
   <header class="main-header">
-    <div class="navbar-fixed">
+    <div class="">
       <nav class="transparent">
         <div class="container">
           <div class="nav-wrapper">
@@ -29,14 +29,14 @@
               <li class="active">
                 <a href="index.html" class="active-link">Home</a>
               </li>
-              <li class="active">
-                <a href="index.html">Solution</a>
-              </li>
-              <li class="active">
-                <a href="index.html">Sign Up</a>
+              <li>
+                <a href="solutions.html">Solutions</a>
               </li>
               <li>
-                <a href="#" class="btn purple">Login</a>
+                <a href="signup.html">Sign Up</a>
+              </li>
+              <li>
+                <a href="#login-modal" class="btn purple modal-trigger">Login</a>
               </li>
               <li>
                 <a href="https://www.facebook.com/">
@@ -66,16 +66,16 @@
         <a href="index.html" class="active-link">Home</a>
       </li>
       <li class="active">
-        <a href="index.html">Solution</a>
+        <a href="solutions.html">Solution</a>
       </li>
       <li class="active">
-        <a href="index.html">Sign Up</a>
+        <a href="signup.html">Sign Up</a>
       </li>
       <li>
         <div class="divider"></div>
       </li>
       <li>
-        <a href="#" class="btn purple">Login</a>
+        <a href="#login-modal" class="btn purple modal-trigger">Login</a>
       </li>
     </ul>
     <!-- showcase -->
@@ -210,6 +210,97 @@
     </div>
   </section>
 
+  <!-- Section: Testimonial -->
+  <section class="section section-testimonial grey lighten-4">
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <div class="carousel carousel-slider center">
+            <div class="carousel-item" href="#one">
+              <h2>Testimonial 1</h2>
+              <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, minima sit ducimus laborum magni totam rerum rem! Atque magni, aspernatur iure, voluptatibus ea eaque aut quia molestiae quas, non minus.</p>
+              <div class="carousel-fixed-item center hide-on-small-and-down">
+                <a href="#" class="btn grey">Read More</a>
+              </div>
+            </div>
+            <div class="carousel-item" href="#two">
+              <h2>Testimonial 2</h2>
+              <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, minima sit ducimus laborum magni totam rerum rem! Atque magni, aspernatur iure, voluptatibus ea eaque aut quia molestiae quas, non minus.</p>
+              <div class="carousel-fixed-item center hide-on-small-and-down">
+                <a href="#" class="btn grey">Read More</a>
+              </div>
+            </div>
+            <div class="carousel-item" href="#three">
+              <h2>Testimonial 3</h2>
+              <p class="flow-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, minima sit ducimus laborum magni totam rerum rem! Atque magni, aspernatur iure, voluptatibus ea eaque aut quia molestiae quas, non minus.</p>
+              <div class="carousel-fixed-item center hide-on-small-and-down">
+                <a href="#" class="btn grey">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="page-footer deep-purple lighten-1">
+    <div class="container">
+      <div class="row">
+        <div class="col s12 l6">
+          <h5 class="white-text">About Us</h5>
+          <p class="grey-text text-lighten-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. In repellat temporibus tempore veritatis quas dolores libero voluptatibus? Ea cupiditate deserunt nemo. Earum, repellendus? Earum tenetur, eaque fugit quasi voluptate quae!</h>
+        </div>
+        <div class="col s12 l4 offset-l2">
+           <h5 class="white-text">Links</h5>
+           <ul>
+             <li>
+               <a href="index.html" class="grey-text text-lighten-3">Home</a>
+             </li>
+             <li>
+               <a href="solutions.html" class="grey-text text-lighten-3">Solution</a>
+             </li>
+             <li>
+               <a href="signup.html" class="grey-text text-lighten-3">Sign Up</a>
+             </li>
+           </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-copyright deep-purple darken-1">
+      <div class="container">
+        Quazzu &copy; 2021
+        <a href="#" class="grey-text text-lighten-4 right">Term and Conditions</a>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Login Modal -->
+  <div id="login-modal" class="modal">
+    <div class="modal-content">
+      <h4>Account Login</h4>
+      <p>Login to access your account dashboard</p>
+      <form>
+        <div class="input-field">
+          <input type="email" id="email">
+          <label for="email">Email</label>
+        </div>
+        <div class="input-field">
+          <input type="password" id="password">
+          <label for="password">Password</label>
+        </div>
+      </form>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-action modal-close btn grey">
+        <i class="fa fa-sync"></i> Reset Password
+      </a>
+      <a href="#!" class="modal-action modal-close btn purple">
+        <i class="fa fa-lock"></i> Login
+      </a>
+    </div>
+  </div>
+
     
 
 
@@ -223,7 +314,13 @@
       $('.sidenav').sidenav({
         edge: 'right'
       });
-    });
+      // Carousel Init
+      $('.carousel.carousel-slider').carousel({
+        fullWidth: true
+      });
+      // Modal Init
+      $('.modal').modal();
+     });
    </script>
 </body>
 </html>
